# python-sql-parser

./: .gitignore  .pylintrc  .travis.yml  MANIFEST.in  README.md  generate_grammar.py  setup.cfg  setup.py
.github/workflows/: main.yml
src/sqlparser/: __init__.py  baseparser.py  internalparser.py  parsing.py  stringparser.py  utils.py
src/sqlparser/grammar/: SqlBase.g4
tests/: test_string_parsing.py
